# crawlee

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Crawler.md  Dockerfile  README.md  SECURITY.md  plan.md  pyproject.toml  run_all_crawls.sh
.github/: dependabot.yml
app/: auth_agent.py  auth_browser.py  auth_config.py  auth_log_extract.py  auth_model.py  auth_secrets.py  auth_traffic.py  cli.py  common.py  crawler.py  db.py  job_status.py  log_records.py  main.py  models.py  orchestrator.py  parser.py  process.py  proxy.py  scope_config.py  settings.py
docs/: docs.html  index.html  proxify-bug-report.md  proxify-repro-server.py  refactor-simplification-review.md  server-security-review.md  testsite-comparison-report.md  testsite-comparison-results.json  testsite-full-speed-reliability-report.md  testsite-full-speed-reliability-results.json
k8s/: service.yaml  statefulset.yaml
scripts/: check_docs_links.py  check_github_actions_pins.py  run_auth_agent_tests.py  run_crawler_auth_tests.py  run_external_site_comparison.py  run_testsite_comparison.py
tests/: conftest.py  test_auth_agent.py  test_auth_agent_e2e.py  test_auth_config.py  test_auth_secrets.py  test_auth_traffic.py  test_cli.py  test_cli_endpoints.py  test_common.py  test_crawler.py  test_crawler_auth_runner.py  test_db.py  test_exclusion_e2e.py  test_external_site_comparison.py  test_log_sanitize.py  test_orchestrator.py  test_parser.py  test_process.py  test_proxy.py  test_scenarios.py  test_testsite_comparison.py
testsites/: README.md  docker-compose.yml  verify_sites.py
(+92 files in other folders)
