[project]
name = "tenzai-crawler"
version = "0.1.0"
description = "Tenzai async-native AI-driven web crawler"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "httpx",
  "uvicorn",
  "aiosqlite",
  "playwright",
  "llm",
  "pyotp",
  "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
dev = ["pre-commit", "ruff", "ty"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
crawler = "app.cli:main"
crawler-server = "app.main:cli"
tenzai-crawler = "app.cli:main"
tenzai-crawler-server = "app.main:cli"

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
  ".git",
  ".venv",
  "testsites",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.src]
include = ["app", "tests"]
exclude = ["testsites/**", ".venv/**"]

[tool.pytest.ini_options]
pythonpath = ["."]
